; ModuleID = '/home/carl/AnghaBench/linux/tools/lib/bpf/extr_hashmap.c_hashmap_del_entry.c'
source_filename = "/home/carl/AnghaBench/linux/tools/lib/bpf/extr_hashmap.c_hashmap_del_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hashmap_entry = type { %struct.hashmap_entry* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hashmap_entry**, %struct.hashmap_entry*)* @hashmap_del_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hashmap_del_entry(%struct.hashmap_entry** %0, %struct.hashmap_entry* %1) #0 {
  %3 = alloca %struct.hashmap_entry**, align 8
  %4 = alloca %struct.hashmap_entry*, align 8
  store %struct.hashmap_entry** %0, %struct.hashmap_entry*** %3, align 8
  store %struct.hashmap_entry* %1, %struct.hashmap_entry** %4, align 8
  %5 = load %struct.hashmap_entry*, %struct.hashmap_entry** %4, align 8
  %6 = getelementptr inbounds %struct.hashmap_entry, %struct.hashmap_entry* %5, i32 0, i32 0
  %7 = load %struct.hashmap_entry*, %struct.hashmap_entry** %6, align 8
  %8 = load %struct.hashmap_entry**, %struct.hashmap_entry*** %3, align 8
  store %struct.hashmap_entry* %7, %struct.hashmap_entry** %8, align 8
  %9 = load %struct.hashmap_entry*, %struct.hashmap_entry** %4, align 8
  %10 = getelementptr inbounds %struct.hashmap_entry, %struct.hashmap_entry* %9, i32 0, i32 0
  store %struct.hashmap_entry* null, %struct.hashmap_entry** %10, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
